Fix bug in issue label z-index

--- a/src/components/StatusLabel/styles.scss
+++ b/src/components/StatusLabel/styles.scss
@@ -8,7 +8,6 @@
     transition: all 1s;
     overflow: hidden;
     text-align: center;
-    z-index: 1;
 
     &.label-open {
         color: $color-baby-blue;
@@ -39,7 +38,7 @@
             height: 100%;
             background-color: $color-baby-pink;
             transition: all 2s;
-            z-index: -1;
+            z-index: 2;
             transform: translateX(-100%);
         }
     }
